--- a/Final Project Kelompok 22/requirements.txt
+++ b/Final Project Kelompok 22/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
+streamlit==1.34.0
+pandas==1.5.3
+numpy==1.23.5
+matplotlib==3.7.1
+seaborn==0.12.2
+scikit-learn==1.2.2
